[bugfix] navbar z-index changed so it stays on top all the time

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -8,6 +8,12 @@ h4 {
   font-family: arial;
 }
 
+.navbar {
+  position: fixed;
+  display: block;
+  z-index: 2;
+}
+
 
 .jumbotron {
   background: url('');
